[gd_scene load_steps=6 format=3 uid="uid://8y1a4mxfo4n"]

[ext_resource type="Script" path="res://Scripts/hud.gd" id="1_sh4ty"]
[ext_resource type="PackedScene" uid="uid://hkfu5bb684l3" path="res://Scenes/line.tscn" id="2_nxdrm"]
[ext_resource type="Theme" uid="uid://c274dx0mi7t8d" path="res://Themes/noel.tres" id="2_uamid"]
[ext_resource type="LabelSettings" uid="uid://dkex8nougu82e" path="res://Themes/score.tres" id="3_8663k"]
[ext_resource type="PackedScene" uid="uid://ccm35jlpafosk" path="res://Scenes/tab_score_container.tscn" id="5_g4xwl"]

[node name="HUD" type="CanvasLayer"]
layer = -2
script = ExtResource("1_sh4ty")

[node name="Panel" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_uamid")
color = Color(0.792157, 0.858824, 0.917647, 0.556863)

[node name="Container" type="VBoxContainer" parent="."]
offset_left = 100.0
offset_top = 100.0
offset_right = 350.0
offset_bottom = 700.0

[node name="Point" type="Label" parent="Container"]
visibility_layer = 3
layout_mode = 2
label_settings = ExtResource("3_8663k")

[node name="Combo" type="RichTextLabel" parent="Container"]
custom_minimum_size = Vector2(200, 100)
layout_mode = 2
size_flags_horizontal = 8
theme = ExtResource("2_uamid")
bbcode_enabled = true
fit_content = true

[node name="Comment" type="Label" parent="."]
visibility_layer = 3
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -0.5
offset_right = 0.5
offset_bottom = 23.0
grow_horizontal = 2
horizontal_alignment = 1

[node name="Line" parent="." instance=ExtResource("2_nxdrm")]
visible = false
visibility_layer = 3
color = Color(0.462745, 0.462745, 0.462745, 0.392157)

[node name="TabScoreLayer" type="CanvasLayer" parent="."]
layer = 2

[node name="CenterContainer" type="CenterContainer" parent="TabScoreLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -960.0
offset_top = -540.0
offset_right = 960.0
offset_bottom = 540.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ColorRect" type="ColorRect" parent="TabScoreLayer/CenterContainer"]
custom_minimum_size = Vector2(1920, 1080)
layout_mode = 2
color = Color(0.933333, 0.666667, 0.654902, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="TabScoreLayer/CenterContainer"]
layout_mode = 2

[node name="Titre" type="RichTextLabel" parent="TabScoreLayer/CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(200, 200)
layout_mode = 2
size_flags_vertical = 3
bbcode_enabled = true
text = "[center]Tableau des meilleurs scores ! 
(si t'es pas dedans c'est que ton score Ã©tait pas fifou)[/center]"
fit_content = true

[node name="tabScoreContainer" parent="TabScoreLayer/CenterContainer/VBoxContainer" instance=ExtResource("5_g4xwl")]
custom_minimum_size = Vector2(0, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Replay" type="Button" parent="TabScoreLayer/CenterContainer/VBoxContainer" groups=["button"]]
layout_mode = 2
text = "Click Here To Replay"

[node name="First" type="CanvasLayer" parent="."]
layer = 3

[node name="MenuLayer" type="CanvasLayer" parent="."]

[node name="CenterContainer" type="CenterContainer" parent="MenuLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -110.0
offset_top = -77.5
offset_right = 110.0
offset_bottom = 77.5
grow_horizontal = 2
grow_vertical = 2

[node name="Background" type="ColorRect" parent="MenuLayer/CenterContainer"]
custom_minimum_size = Vector2(1920, 1080)
layout_mode = 2
color = Color(0.517647, 0.52549, 0.682353, 1)

[node name="MarginContainer" type="MarginContainer" parent="MenuLayer/CenterContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MenuLayer/CenterContainer/MarginContainer"]
layout_mode = 2

[node name="Titre" type="RichTextLabel" parent="MenuLayer/CenterContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(200, 100)
layout_mode = 2
size_flags_vertical = 3
bbcode_enabled = true
text = "[center]ChrismasRythm[/center]"

[node name="ButtonPlay" type="Button" parent="MenuLayer/CenterContainer/MarginContainer/VBoxContainer" groups=["button", "buttonMenu"]]
layout_mode = 2
text = "Play"

[node name="ButtonQuit" type="Button" parent="MenuLayer/CenterContainer/MarginContainer/VBoxContainer" groups=["button", "buttonMenu"]]
layout_mode = 2
text = "Quit"

[node name="PauseLayer" type="CanvasLayer" parent="."]
process_mode = 2

[node name="CenterContainer" type="CenterContainer" parent="PauseLayer"]
offset_right = 40.0
offset_bottom = 40.0

[node name="MarginContainer" type="MarginContainer" parent="PauseLayer/CenterContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PauseLayer/CenterContainer/MarginContainer"]
layout_mode = 2

[node name="Titre" type="RichTextLabel" parent="PauseLayer/CenterContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
bbcode_enabled = true
text = "[center]Game Paused[/center]"

[node name="Continue" type="Button" parent="PauseLayer/CenterContainer/MarginContainer/VBoxContainer" groups=["buttonPause"]]
layout_mode = 2
text = "Continue"

[node name="Replay" type="Button" parent="PauseLayer/CenterContainer/MarginContainer/VBoxContainer" groups=["buttonPause"]]
layout_mode = 2
text = "Click Here To Replay"

[connection signal="pressed" from="TabScoreLayer/CenterContainer/VBoxContainer/Replay" to="." method="_on_replay_pressed"]
[connection signal="pressed" from="MenuLayer/CenterContainer/MarginContainer/VBoxContainer/ButtonPlay" to="." method="_on_button_play_pressed"]
[connection signal="pressed" from="MenuLayer/CenterContainer/MarginContainer/VBoxContainer/ButtonQuit" to="." method="_on_button_quit_pressed"]
[connection signal="pressed" from="PauseLayer/CenterContainer/MarginContainer/VBoxContainer/Continue" to="." method="_on_continue_pressed"]
[connection signal="pressed" from="PauseLayer/CenterContainer/MarginContainer/VBoxContainer/Replay" to="." method="_on_replay_pressed"]
